# cpp-cuda-opencv-ffmpeg-tests

./: .gitignore  Dockerfile  README.md  app  app.cpp  blue_edges.cpp  blue_edges.cpp.save  blue_edges.h  compile-script.sh  compiler-image  cudatest  cudatest.cpp  entrypoint.sh  opencv.pc  xclip  ziba.cpp
docker-compiler-img/: README.md
src/: CMakeLists.txt  app.cpp  blue_edges.cpp  cudatest.cpp
